# RcppOctave

./: .Rbuildignore  .project  .travis.yml  DESCRIPTION  LICENSE  NAMESPACE  NEWS  Octave-class.html  OctaveConfig.html  OctaveFunction-class.html  OctaveInterface.html  PAGE-DEMOS.html  PAGE-FAQ.html  PAGE-MAN.html  PAGE-REFERENCES.html  README  README.md  RcppOctave-package.html  _DEMOS.html  _MAN.html  check.equal.html  cleanup  cleanup.win  configure  configure-win  configure.ac  configure.in  configure.win  demo-Kalman.html  demo-gamma.html  demo-gibbs.html  demo-timerng.html  dot-CallOctave.html  dot-DollarNames-commaOctave-method.html  index.html  mfiles.html  o_addpath.html  o_assign.html  o_clear.html  o_eval.html  (+17 more)
R/: Octave-class.R  OctaveFunction-class.R  aaa-config.R.in  base-functions.R  config-vars.R.in  config.R  eval.R  interface.R  package.R  random.R  utils.R
current/: Octave-class.html  OctaveConfig.html  OctaveFunction-class.html  OctaveFunction.html  OctaveInterface.html  PAGE-DEMOS.html  PAGE-FAQ.html  PAGE-MAN.html  PAGE-REFERENCES.html  RcppOctave-package.html  _PAGE-FAQ.html  _REFERENCES.html  check.equal.html  demo-Kalman.html  demo-gamma.html  demo-gibbs.html  demo-timerng.html  dot-CallOctave.html  dot-DollarNames-commaOctave-method.html  index.html  mfiles.html  o_addpath.html  o_assign.html  o_clear.html  o_eval.html  o_help.html  o_identity.html  o_load.html  o_ls.html  o_rexp.html  o_rgamma.html  o_rnorm.html  o_runif.html  o_source.html  o_version.html  o_who.html  o_whos.html  octave-ll.html  show-commaOctave-method.html
demo/: 00Index
develop/: Octave-class.html  OctaveConfig.html  OctaveFunction-class.html  OctaveInterface.html  PAGE-DEMOS.html  PAGE-FAQ.html  PAGE-MAN.html  PAGE-REFERENCES.html  RcppOctave-package.html  check.equal.html  demo-Kalman.html  demo-gamma.html  demo-gibbs.html  demo-timerng.html  dot-CallOctave.html  dot-DollarNames-commaOctave-method.html  index.html  mfiles.html  o_addpath.html  o_assign.html  o_clear.html  o_eval.html  o_exist.html  o_help.html  o_identity.html  o_load.html  o_ls.html  o_rexp.html  o_rgamma.html  o_rnorm.html  o_runif.html  o_source.html  o_version.html  o_who.html  o_whos.html  octave-ll.html  show-commaOctave-method.html  sourceExamples.html  system.mfile.html
develop/cache/: demo.rda  topic.rda
exec/: configure-win  m4.R  m4.win  octave.m4
inst/: REFERENCES.bib
inst/include/: RcppOctave.h
inst/scripts/: PKG_ADD  ex_functions.m  ex_source.m
inst/unitTests/: runTests.R  runit.eval.R  runit.stats.R
man/: Octave-class.Rd  Octave.config.Rd  Octave.home.Rd  Octave.info.Rd  OctaveConfig.Rd  OctaveFunction-class.Rd  OctaveInit.Rd  OctaveInterface.Rd  RcppOctave-package.Rd  autocomplete.Rd  check.equal.Rd  dot-CallOctave.Rd  dot-DollarNames-commaOctave-method.Rd  dot-OctaveLibs.Rd  dot-isPlatformCompatible.Rd  mfiles.Rd  o_addpath.Rd  o_assign.Rd  o_clear.Rd  o_config_info.Rd  o_eval.Rd  o_exist.Rd  o_help.Rd  o_identity.Rd  o_load.Rd  o_ls.Rd  o_rexp.Rd  o_rgamma.Rd  o_rnorm.Rd  o_rpois.Rd  o_runif.Rd  o_source.Rd  o_version.Rd  o_who.Rd  o_whos.Rd  octave-ll.Rd  octave_config.Rd  rcppoctave.Rd  show-commaOctave-method.Rd  sourceExamples.Rd  (+1 more)
man-roxygen/: OctaveDoc.R
master/: Octave-class.html  Octave.config.html  Octave.home.html  OctaveFunction-class.html  OctaveInterface.html  PAGE-DEMOS.html  PAGE-FAQ.html  PAGE-INSTALLATION.html  PAGE-MAN.html  PAGE-NEWS.html  PAGE-REFERENCES.html  RcppOctave-package.html  check.equal.html  demo-Kalman.html  demo-gamma.html  demo-gibbs.html  demo-timerng.html  dot-CallOctave.html  dot-DollarNames-commaOctave-method.html  index.html  mfiles.html  o_addpath.html  o_assign.html  o_clear.html  o_config_info.html  o_eval.html  o_exist.html  o_help.html  o_identity.html  o_load.html  o_ls.html  o_rexp.html  o_rgamma.html  o_rnorm.html  o_runif.html  o_source.html  o_version.html  o_who.html  o_whos.html  octave-ll.html  (+4 more)
master/cache/: demo.rda  topic.rda
release/: OctaveConfig.html  OctaveFunction-class.html  PAGE-DEMOS.html  PAGE-FAQ.html  PAGE-MAN.html  PAGE-REFERENCES.html  check.equal.html  demo-Kalman.html  demo-gamma.html  demo-gibbs.html  demo-timerng.html  index.html  mfiles.html  o_assign.html  o_clear.html  o_eval.html  o_help.html  o_identity.html  o_rnorm.html  o_runif.html  o_who.html  o_whos.html  octave-ll.html  show-commaOctave-method.html  sourceExamples.html
release/cache/: topic.rda
src/: Makevars.in  Makevars.win  Makevars.win.in  Redirect.hpp  compatibility.h  conversion.cpp  rcpp_octave.cpp  rcpp_octave.h  swig_octave_version.h
src/libRrng/: Makefile  config.h.in  configure.in  datetime.c  fmax2.c  fmin2.c  libRrng.c  libRrng.h  qnorm.c  rgamma.c  sexp.c  snorm.c
src/modules/: Makefile.in  PKG_ADD  RcppOctave.cc  Rrng.cc  utils.cc
staticdocs/: FAQ.Rmd
tests/: doRUnit.R
vignettes/: .install_extras  RJwrapper.tex  RcppOctave-unitTests.Rnw  RcppOctave-unitTests.tex  RcppOctave.Rnw  RcppOctave.tex  Rpackages.bib
vignettes/RJ/: EddelbuettelGaujoux.inc  RJwrapper.Rnw
